--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "atqa-cc",
+  "name": "atqamz-com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "node scripts/generate-shortlinks.mjs && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.0.0",
     "lucide-react": "^0.556.0",
-    "next": "14.1.0",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@next/mdx": "^16.0.7",
     "@types/mdx": "^2.0.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.0.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
